--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("..//assets/background.jpg");
+	background-image: url("./background.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 
